# inventory_bot

./: Procfile  README.md  bot.py  copy.txt  inventory.db  inventory_385469414.xlsx  inventory_950609832.xlsx  pyproject.toml  requirements.txt  token.env
.gigaide/: gigaide.properties
